# ai-paper-api

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  app.py  main.py  pyproject.toml  start.sh
.agents/skills/: SKILL.md
api/dependencies/: __init__.py  api_token.py  auth.py
api/v1/: __init__.py  admin.py  auth.py  health.py  thesis.py  user.py
core/: config.py  database.py  logger.py  redis.py  security.py
doc/: README.md  ai-model-config.md  api-integration.md  operations.md  startup-and-deployment.md  storage-config.md  thesis-generation.md
llm/: call_logger.py  client.py
llm/prompts/: thesis_abstract_prompt.py  thesis_fulltext_prompt.py  thesis_outline_prompt.py  thesis_reference_prompt.py  thesis_title_prompt.py
middlewares/: __init__.py
models/: admin.py  base.py  paper.py  user.py
prompts/: fastapi-template-init.md
public/: index.html
public/css/: BasicInfoStep-CcGiNb4H.css  GenerationStatusStep-DMW67OBM.css  GenerationStatusStep-Db39rrqs.css  OutlineEditorStep-C6mgq9tT.css  basic-B0EtGUgG.css  bootstrap-D_qvMTMv.css  config-mg_WkEd9.css  generate-3mfyzzMu.css  generate-D3xBPTy4.css
public/js/: AlertBuilder-BMJTSQ0U.js  AlertBuilder-DCpewId2.js  AlertBuilder-Iz3asz61.js  AntdIcon-BP4QZl0K.js  AntdIcon-D-FTQfyJ.js  AntdIcon-_2iBBJnT.js  BasicInfoStep-DA2YeQLw.js  BasicInfoStep-DsOmsjfA.js  BasicInfoStep-WlevIFK3.js  (+415 more)
schemas/: admin.py  common.py  thesis.py  user.py
services/: admin.py  user.py
sql/: init.sql  paper_schema.sql
tasks/: paper_recovery.py  paper_worker.py  runner.py  scheduler.py
tests/: test_admin_model_configs.py  test_admin_users.py  test_config.py  test_health.py  test_llm_client.py  test_paper_queue.py  test_paper_worker.py  test_security.py  test_status_store.py
utils/: paginate.py
(+115 files in other folders)
